[gd_scene load_steps=12 format=2]

[ext_resource path="res://entities/Discussion/PostDiscussion.gd" type="Script" id=1]
[ext_resource path="res://images/background.jpg" type="Texture" id=2]
[ext_resource path="res://images/logo_small.png" type="Texture" id=3]
[ext_resource path="res://fonts/OpenSans_Normal.tres" type="DynamicFont" id=4]
[ext_resource path="res://images/button_post.png" type="Texture" id=5]
[ext_resource path="res://images/modal_box.png" type="Texture" id=6]
[ext_resource path="res://entities/Discussion/Post_Discussion_Success_Popup.gd" type="Script" id=7]
[ext_resource path="res://images/button_done.png" type="Texture" id=8]
[ext_resource path="res://images/frames/loading/Loading.tres" type="SpriteFrames" id=9]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.847059, 0.8, 0.8, 1 )

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.847059, 0.8, 0.8, 1 )

[node name="PostDiscussion" type="Node2D"]
script = ExtResource( 1 )

[node name="Background" type="Sprite" parent="."]
position = Vector2( 510.394, 298.801 )
scale = Vector2( 0.853, 0.501 )
texture = ExtResource( 2 )

[node name="Logo" type="Sprite" parent="."]
position = Vector2( 179.55, 78.8501 )
texture = ExtResource( 3 )

[node name="Title" type="RichTextLabel" parent="."]
margin_left = 408.0
margin_top = 66.0
margin_right = 847.0
margin_bottom = 134.0
rect_scale = Vector2( 0.8, 0.8 )
custom_fonts/normal_font = ExtResource( 4 )
custom_colors/default_color = Color( 0.694118, 0.109804, 0.109804, 1 )
text = "POST DISCUSSION"
scroll_active = false

[node name="RichTextLabel" type="RichTextLabel" parent="."]
margin_left = 126.0
margin_top = 163.0
margin_right = 808.0
margin_bottom = 230.0
rect_scale = Vector2( 0.45, 0.45 )
custom_fonts/normal_font = ExtResource( 4 )
custom_colors/default_color = Color( 0, 0, 0, 1 )
custom_colors/selection_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_selected = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "ENTER DISCUSSION TITLE:"
scroll_active = false

[node name="RichTextLabel2" type="RichTextLabel" parent="."]
margin_left = 129.0
margin_top = 263.0
margin_right = 811.0
margin_bottom = 330.0
rect_scale = Vector2( 0.45, 0.45 )
custom_fonts/normal_font = ExtResource( 4 )
custom_colors/default_color = Color( 0, 0, 0, 1 )
custom_colors/selection_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_selected = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "ENTER DISCUSSION DETAILS:"
scroll_active = false

[node name="RichTextLabel3" type="RichTextLabel" parent="."]
margin_left = 133.0
margin_top = 485.0
margin_right = 1791.0
margin_bottom = 552.0
rect_scale = Vector2( 0.45, 0.45 )
custom_fonts/normal_font = ExtResource( 4 )
custom_colors/default_color = Color( 1, 0, 0, 1 )
custom_colors/selection_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_selected = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "<Error Message Here>"
scroll_active = false

[node name="TextEdit" type="TextEdit" parent="."]
margin_left = 127.0
margin_top = 208.0
margin_right = 892.0
margin_bottom = 250.0
custom_styles/normal = SubResource( 1 )
custom_colors/font_color_selected = Color( 1, 0, 0, 1 )
custom_colors/font_color = Color( 1, 0, 0, 1 )

[node name="TextEdit2" type="TextEdit" parent="."]
margin_left = 130.0
margin_top = 306.0
margin_right = 895.0
margin_bottom = 476.0
custom_styles/normal = SubResource( 2 )
custom_colors/font_color_selected = Color( 1, 0, 0, 1 )
custom_colors/font_color = Color( 1, 0, 0, 1 )
smooth_scrolling = true

[node name="PostDiscussion_Btn" type="TouchScreenButton" parent="."]
position = Vector2( 805, 519 )
scale = Vector2( 1.05195, 1.32353 )
normal = ExtResource( 5 )

[node name="Post_Discussion_Success_Popup" type="Sprite" parent="."]
position = Vector2( 510, 330 )
scale = Vector2( 0.853, 0.8 )
texture = ExtResource( 6 )
script = ExtResource( 7 )

[node name="RichTextLabel" type="RichTextLabel" parent="Post_Discussion_Success_Popup"]
margin_left = -218.656
margin_top = -49.9999
margin_right = 885.344
margin_bottom = 121.0
rect_scale = Vector2( 0.4, 0.4 )
custom_fonts/normal_font = ExtResource( 4 )
custom_colors/default_color = Color( 0, 0, 0, 1 )
custom_colors/selection_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_selected = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "Your discussion has been posted successfully!"

[node name="done_btn" type="TouchScreenButton" parent="Post_Discussion_Success_Popup"]
position = Vector2( -70.34, 3.05176e-005 )
scale = Vector2( 1.41245, 1.47059 )
normal = ExtResource( 8 )

[node name="loading" type="Popup" parent="."]
margin_right = 40.0
margin_bottom = 40.0

[node name="loadingbg" type="Sprite" parent="loading"]
position = Vector2( 513.195, 303.252 )
scale = Vector2( 2.285, 1 )
texture = ExtResource( 6 )

[node name="loading" type="AnimatedSprite" parent="loading"]
position = Vector2( 552.116, 311.961 )
frames = ExtResource( 9 )
animation = "loading"
frame = 16
playing = true
